# SeamAwareDecimater

./: .gitignore  CMakeLists.txt  collapse_edge_seam.cpp  collapse_edge_seam.h  cost_and_placement.cpp  cost_and_placement.h  decimate.cpp  decimate.h  decimater.cpp  quadric_error_metric.cpp  quadric_error_metric.h
cmake/: FindEIGEN.cmake
